# Iumict_Agent

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  start.bat  stop.bat
docs/: CHANGELOG.md  PROJECT_STATUS.md
models/: .gitkeep
src/application/api/: main.py
src/application/api/routes/: __init__.py  hardware.py  rag.py
src/application/ui/: app.py
src/application/ui/pages/: 1_대시보드.py  2_수위_모니터링.py  3_펌프_제어.py  4_RAG_문서.py  5_설정.py  main_dashboard.py  rag_page.py  settings_page.py
src/config/: settings.py
src/core/services/: rag_service.py
src/infrastructure/ai/: llm_client.py
src/infrastructure/ai/rag/: embedder.py  pdf_parser.py  vector_store.py
src/infrastructure/database/: connection.py  models.py  repository.py
src/infrastructure/hardware/: factory.py  interface.py  modbus_plc.py  simulator.py
