[tool.poetry]
name = "Iumict-Agent"
version = "0.1.0"
description = "Iumict LLM 활용 설비 관리 Agent"
authors = ["황병준 <hbj0121@naver.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
# 웹 프레임워크
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
streamlit = "^1.30.0"

# PLC 통신
pymodbus = "^3.6.0"

# 데이터베이스
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"

# AI/ML
torch = "^2.1.0"
numpy = "^1.26.3"
pandas = "^2.1.4"

# LLM & RAG
langchain = "^0.1.0"
langchain-community = "^0.0.13"
openai = "^1.10.0"
sentence-transformers = "^2.3.1"
pypdf = "^3.17.4"

# 설정 관리
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"

# 로깅
structlog = "^24.1.0"

# 유틸리티
httpx = "^0.26.0"
python-multipart = "^0.0.6"
aiofiles = "^23.2.1"
psycopg-binary = "^3.3.3"
psycopg = "^3.3.3"

[tool.poetry.group.dev.dependencies]
# 테스팅
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"

# 코드 품질
black = "^23.12.1"
ruff = "^0.1.11"
mypy = "^1.8.0"
isort = "^5.13.2"

# 기타
ipython = "^8.19.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false